# LocalAI

./: .env.registry.example  .gitignore  .gitmodules  BACKEND_BUILD_COMPLETE.md  BACKEND_ISSUE_SOLUTION.md  BUILD_SUCCESS.md  COMPILATION_FIXES.md  DEPLOYMENT_SUCCESS.md  Dockerfile  ENDPOINT_VERIFICATION.md  FRONTEND_ISSUE_DIAGNOSIS.md  LocalAI.code-workspace  Makefile  README.md  README_INPAINT.md  build-cuda.sh  docker-compose.override.yml  docker-compose.yaml  go.mod  go.sum  main.go  test-inpainting-fix.sh  test_inpainting.py
.github/workflows/: dependabot_auto.yml  image-pr.yml
aio/gpu-8g/: image-gen.yaml
aio/intel/: image-gen.yaml
api/backend/: transcript.go
api/openai/: inference.go
backend/: Dockerfile.go  backend.proto  index.yaml
backend/cpp/: BUILD_FIXES.md  METADATA.md  validate_build.sh
backend/cpp/llama/: CMakeLists.txt  grpc-proto-includes.cpp  prepare.sh
backend/cpp/llama-avx/: README.md  grpc-server-CMakeLists.txt  mtmd-stub.cpp  mtmd-stub.h  prepare.sh
backend/cpp/llama-avx/llama/: CMakeLists.txt  prepare.sh
backend/cpp/llama-avx2/llama/: CMakeLists.txt  prepare.sh
backend/go/tts/: piper.go
backend/go/vad/silero/: vad.go
backend/python/diffusers/: backend.py  requirements-intel.txt
backend/python/mytts/: Makefile  README.md  backend.py  install.sh  main.py  requirements.txt  start.sh  test.py  test.sh  test_quick.sh
backends/cuda12-diffusers/: backend.py  backend.py.rej  backend_custom_target.py  backend_pb2.py  backend_pb2_grpc.py  metadata.json  requirements.txt  run.sh
backends/cuda12-faster-whisper-development/: metadata.json
backends/cuda12-vllm/: metadata.json
core/backend/: soundgeneration.go  transcript.go  tts.go
core/cli/: cli.go  models.go  run.go  transcript.go  tts.go
core/config/: application_config.go  backend_config.go  config_test.go
core/http/: app.go  explorer.go  render.go
core/http/endpoints/localai/: tts.go
core/http/endpoints/openai/: assistant.go  assistant_test.go  image.go  inpainting.go  inpainting_test.go  mcp.go
core/http/routes/: openai.go  ui.go
core/http/static/: inpainting.js
core/http/views/: inpainting.html
core/http/views/partials/: navbar.html
core/schema/: localai.go  openai.go  prediction.go
docker/: Dockerfile.inpainting
docs/content/docs/features/: reranker.md
gallery/: dreamshaper-8-inpainting.yaml  dreamshaper.yaml  index.yaml
models/: ._gallery_dreamshaper.yaml  ._gallery_mlabonne_qwen3-14b-abliterated.yaml  ._gallery_parler-tts-mini-v0.1.yaml  ._gallery_silero-vad.yaml  ._gallery_ultravox-v0_5-llama-3_1-8b.yaml  ._gallery_voice-fr-siwis-medium.yaml  ._gallery_voice-uk-lada-x-low.yaml  ._gallery_whisper-medium-q5_0.yaml  ._gallery_whisper-small-q5_1.yaml  Mistral-7B-Instruct-v0.3.Q4_K_M.gguf  dreamshaper.yaml  fr-siwis-medium.onnx  mlabonne_qwen3-14b-abliterated.yaml  mytts-english.yaml  mytts-francais.yaml  mytts-french.yaml  parler-tts-mini-v0.1.yaml  piper-tts-test.yaml  silero-vad.yaml  stable-diffusion-2-inpainting.yaml  tts-coqui.yaml  ultravox-v0_5-llama-3_1-8b.yaml  voice-fr-siwis-medium.yaml  voice-uk-lada-x-low.yaml  whisper-medium-q5_0.yaml  whisper-small-q5_1.yaml
models/examples/: voice-en-us-example.yaml  voice-fr-example.yaml
patch/: stable_diffusion_inpaint_support.patch  tts_lang_filter.go  tts_lang_filter_full.go
pkg/assets/: list.go
pkg/downloader/: progress.go  uri.go  uri_test.go
pkg/grpc/: backend.go  embed.go
pkg/grpc/proto/github.com/mudler/LocalAI/pkg/grpc/proto/: backend_grpc.pb.go
pkg/grpc/proto/github.com/mudler/LocalAI/pkg/grpc/proto/github.com/go-skynet/LocalAI/pkg/grpc/proto/: backend.pb.go
pkg/startup/: model_preload.go  model_preload_test.go
pkg/utils/: config.go
scripts/: build-and-push.sh  example-build.sh  registry-config.sh  setup-backend-cuda12-diffusers.sh  setup-backend-piper-grpc.sh  test-config.sh
tests/e2e-aio/: e2e_suite_test.go  e2e_test.go
